--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 @font-face {
     font-family: "Alexandria";
     src: url(../fonts/alexandria/Alexandria-Thin.ttf);
